--- a/css/homePage.css
+++ b/css/homePage.css
@@ -4,6 +4,7 @@
 	box-sizing: border-box;
 	text-decoration: none;
 	font-family: arial, sans-serif;
+	/* background-color: rgba(53, 54, 58, 1); */
 }
 
 body {
@@ -77,6 +78,7 @@ nav button {
 	width: 100%;
 	transition: box-shadow 100ms;
 	outline: none;
+	background-color: #fff;
 }
 .s-box  .s-input:hover {
 	border: 1px solid #fff;
@@ -90,10 +92,11 @@ nav button {
 }
 .s-box .search-icon {
 	width: 20px;
-	opacity: .4;
+	opacity: 0.6;
 	position: absolute;
 	top: 13px;
 	left: 14px;
+	background-color: white;
 }
 .s-box .vs-icon {
 	width: 14px;
@@ -101,10 +104,10 @@ nav button {
 	top: 13px;
 	right: 24px;
 }
-.s-btn {
+.search-btn {
 	border: 1px solid transparent;
 	padding: 9px 15px;
-	color: #666;
+	color: gray;
 	font-size: 14px;
 	border-radius: 4px;
 	display: inline-block;
@@ -114,20 +117,20 @@ nav button {
 	cursor: pointer;
 	transition: border-color 100ms;
 }
-.s-btn:hover {
+.search-btn:hover {
 	border: 1px solid #aaa;
 }
-.lang {
+.language {
 	margin-top: 30px;
 	text-align: center;
 	font-size: 13px;
 	color: #111;
 }
-.lang a {
+.language a {
 	margin-left: 5px;
 	color: #1a0dab;
 }
-.lang a:hover {
+.language a:hover {
 	text-decoration: underline;
 }
 footer {
@@ -139,7 +142,7 @@ footer h4 {
 	line-height: 39.5px;
 	font-weight: 400;
 	padding-left: 29px;
-	border: 1px solid #eee;
+	border: 1px solid transparent;
 }
 footer a {
 	color: #5f6368;
@@ -151,7 +154,7 @@ footer a:hover {
 	text-decoration: underline;
 }
 .links {
-	border-top: 1px solid #ddd;
+	border-top: 1px solid lightgray;
 	display: flex;
 }
 .link-1 {
