[FIX]: Add microphone icon in the searchbar

--- a/css/searchResult.css
+++ b/css/searchResult.css
@@ -73,6 +73,7 @@ form {
     padding: 0 15px;
     transition: box-shadow 200ms cubic-bezier(0.4, 0.0, 0.2, 1);
     width: 632px;
+    border-radius: 25px;
 }
 
 form:hover {
@@ -87,6 +88,77 @@ input[type='search'] {
     height: 44px;
     outline: none;
     width: 580px;
+    padding-top: 9px;
+}
+
+/* .microphone-button {
+    background: url("../images/vs.png") no-repeat center;
+    width: 50px;
+    height: 25px;
+    background-size: 23px;
+    background-color: transparent;
+    cursor: pointer;
+} */
+
+.s-box {
+	width: 580px;
+	margin: 0px auto;
+    padding: 0;
+	position: relative;
+	margin-top: -8px;
+	text-align: center;
+}
+.s-box .s-input {
+	display: block;
+	border: 1px solid #ddd;
+	color: rgba(0,0,0, 0.87);
+	font-size: 16px;
+	padding: 13px;
+	padding-left: 45px;
+	border-radius: 25px;
+	width: 100%;
+	transition: box-shadow 100ms;
+	outline: none;
+	background-color: #fff;
+}
+.s-box  .s-input:hover {
+	border: 1px solid #fff;
+	box-shadow: 0 0 2px rgba(0, 0, 0, 0.05), 
+				0 0 2px rgba(0, 0, 0, 0.05),
+				0 0 3px rgba(0, 0, 0, 0.05),
+				0 0 4px rgba(0, 0, 0, 0.05), 
+				0 0 5px rgba(0, 0, 0, 0.05), 
+				0 0 4px rgba(0, 0, 0, 0.05), 
+				0 0 5px rgba(0, 0, 0, 0.05)
+}
+.s-box .search-icon {
+	width: 20px;
+	opacity: 0.6;
+	position: absolute;
+	top: 13px;
+	left: 14px;
+	background-color: white;
+}
+.s-box .vs-icon {
+	position: absolute;
+	top: 13px;
+	right: 24px;
+    height: 25px;
+    background-size: 23px;
+    background-color: transparent;
+    cursor: pointer;
+    margin-right: 23px;
+    margin-top: 7px;
+}
+
+.search_svg{
+    display: inline-block;
+    fill: currentColor;
+    height: 24px;
+    line-height: 24px;
+    position: relative;
+    width: 27px;
+    color:gray;
 }
 
 button {
